--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,116 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: "MonumentExtendedRegular";
+  src: url("./fonts/MonumentExtended-Regular.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "MonumentExtendedBold";
+  src: url("./fonts/MonumentExtended-Ultrabold.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "MonumentExtendedLight";
+  src: url("//db.onlinewebfonts.com/t/5a7f8e143dbda0b26952bc287ad05cc4.eot");
+  src: url("//db.onlinewebfonts.com/t/5a7f8e143dbda0b26952bc287ad05cc4.eot?#iefix")
+      format("embedded-opentype"),
+    url("//db.onlinewebfonts.com/t/5a7f8e143dbda0b26952bc287ad05cc4.woff2")
+      format("woff2"),
+    url("//db.onlinewebfonts.com/t/5a7f8e143dbda0b26952bc287ad05cc4.woff")
+      format("woff"),
+    url("//db.onlinewebfonts.com/t/5a7f8e143dbda0b26952bc287ad05cc4.ttf")
+      format("truetype"),
+    url("//db.onlinewebfonts.com/t/5a7f8e143dbda0b26952bc287ad05cc4.svg#Monument Extended Light")
+      format("svg");
+}
+
+.blue__gradient {
+  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
+  filter: blur(123px);
+}
+
+.purple__gradient {
+  background: linear-gradient(90deg, #f4c4f3 0%, #6a00f0 100%);
+  filter: blur(900px);
+}
+.purple__gradient__2 {
+  background: linear-gradient(90deg, #f4c4f3 0%, #6a00f0 100%);
+  filter: blur(300px);
+}
+
+.purple__gradient__3 {
+	background: linear-gradient(90deg, #f4c4f3 0%, #6a00f0 100%);
+	/* filter: blur(300px); */
+  }
+.white__gradient {
+  background: rgba(255, 255, 255, 0.8);
+  filter: blur(80px);
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.video-full {
+  padding-left: calc(-50vw + 50%);
+  padding-right: calc(-50vw + 50%);
+}
+
+@-webkit-keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+.slide-up {
+  -webkit-animation: slide-top 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-top 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.slide-down{
+  -webkit-animation: slide-bottom 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-bottom 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.sslide{
+  transition : all 1s ease-in-out;
 }
